Fixes mobile mint button being covered & more (#4)
* Remove horizontal scroll on mobile

* Fix footer blocking mint button on mobile

* Adjust top margin on main page

* Remove logo text on mobile

* Ensure mint dialog is on top of header

--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,6 @@
 }
 .App {
   min-height: calc(100vh - 70px);
-  min-width: 475px;
 }
 
 body::-webkit-scrollbar {
